[package]
name = "utilities"
version = "0.1.0"
authors = [
    "Anatoly Yakovenko <anatoly@solana.com>",
    "Greg Fitzgerald <greg@solana.com>",
    "Stephen Akridge <stephen@solana.com>",
    "Michael Vines <mvines@solana.com>",
    "Rob Walker <rob@solana.com>",
    "Pankaj Garg <pankaj@solana.com>",
    "Tyera Eulberg <tyera@solana.com>",
]

[dependencies]
solana = { path = "../" }
