[package]
name = "solana-vote-new"
description = "Solana vote new"
documentation = "https://docs.rs/solana-vote-new"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_vote_new"

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true, optional = true }

[features]
dev-context-only-utils = ["dep:rand"]
frozen-abi = [
    "dep:rustc_version",
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-sdk/frozen-abi",
]

[lints]
workspace = true
